--- a/index.html
+++ b/index.html
@@ -51,25 +51,25 @@ document.addEventListener('DOMContentLoaded', () => {
       { length: 4, width: 8, price: 16.00 },
       { length: 4, width: 10, price: 18.00 },
       { length: 4, width: 12, price: 20.00 },
-      { length: 6, width: 4, price: null },
+      { length: 6, width: 4, price: 14.00 },
       { length: 6, width: 6, price: 15.00 },
       { length: 6, width: 8, price: 17.00 },
       { length: 6, width: 10, price: 19.00 },
       { length: 6, width: 12, price: 21.00 },
-      { length: 8, width: 4, price: null },
-      { length: 8, width: 6, price: null },
+      { length: 8, width: 4, price: 16.00 },
+      { length: 8, width: 6, price: 17.00 },
       { length: 8, width: 8, price: 19.00 },
       { length: 8, width: 10, price: 21.00 },
       { length: 8, width: 12, price: 23.00 },
-      { length: 10, width: 4, price: null },
-      { length: 10, width: 6, price: null },
-      { length: 10, width: 8, price: null },
+      { length: 10, width: 4, price: 18.00 },
+      { length: 10, width: 6, price: 19.00 },
+      { length: 10, width: 8, price: 21.00 },
       { length: 10, width: 10, price: 22.00 },
       { length: 10, width: 12, price: 24.00 },
-      { length: 12, width: 4, price: null },
-      { length: 12, width: 6, price: null },
-      { length: 12, width: 8, price: null },
-      { length: 12, width: 10, price: null },
+      { length: 12, width: 4, price: 20.00 },
+      { length: 12, width: 6, price: 21.00 },
+      { length: 12, width: 8, price: 23.00 },
+      { length: 12, width: 10, price: 24.00 },
       { length: 12, width: 12, price: 28.00 },
       { length: 14, width: 4, price: 22.00 },
       { length: 14, width: 6, price: 24.00 },
